--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <style>
-.banner-image{
-    background-image:url('assets/banner/img1.jpg');
+  <!-- <style>
+      .banner-image{
+    background-image:url('assets/banner/img1.2.jpg');
     background-size: cover;
 }
-  </style>
+  </style> -->
  
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
@@ -45,19 +45,19 @@
         <div class="mx-auto"></div>
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link text-white" href="#">Home</a>
+            <a class="nav-link" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#">About</a>
+            <a class="nav-link" href="#">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#">Blog</a>
+            <a class="nav-link" href="#">Pictures</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#">Pricing</a>
+            <a class="nav-link" href="#joinnow">Join Now</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#contact">Contact</a>
+            <a class="nav-link" href="#contact">Contact</a>
           </li>
         </ul>
       </div>
@@ -65,10 +65,25 @@
   </nav>
 
   <!-- Banner Image  -->
-
-  <div
-    class="banner-image w-100 vh-100 d-flex justify-content-center align-items-center">
+  <header class="container-fluid">
+    <div
+    class="banner-image w-100 d-block justify-content-center align-items-center">
+    <img src="assets/banner/img1.2.jpg" alt="">
   </div>
+  <div class="video-box">
+    <iframe  src="https://www.youtube.com/embed/nwqLPo-HLrA"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; controls=0" allowfullscreen ></iframe>
+  </div>
+ <div class="container-text mt-4 mb-4 text-white ">
+
+    <h2 class="text-item">ULTIMATE KIT FOR HOW TO READ MINDS</h2>
+    <h2 class="text-item">LEARN FROM THE CREATOR</h2>
+    <h2 class="text-item">PROFESSIONAL PACK</h2>
+
+ </div>
+
+  </header>
+
+ 
 
 
  
@@ -76,15 +91,32 @@
 
 
 
+<!-- Image gallery -->
+<section class="gallery">
+  <div class="container-lg mt-4">
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 ">
+      <div class="col">
+        <img src="https://m.media-amazon.com/images/I/61MbLLagiVL._SL1000_.jpg"  class="img-item" alt="" >
+      </div>
+      <div class="img-item col-md-4">
+        <img src="https://m.media-amazon.com/images/I/61MbLLagiVL._SL1000_.jpg" class="img-item" alt="" >
+      </div>
+      <div class="col">
+        <img src="https://m.media-amazon.com/images/I/61MbLLagiVL._SL1000_.jpg" class="img-item" alt="" >
+      </div>
+    </div>
+    </div>
+</section>
+<!-- gallery ends here -->
+
+
   
-  <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/nwqLPo-HLrA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
-  
 
 
 
 
-<div class="container">
-  <div class="div-center ">
+<div class="container mt-3" id="joinnow">
+  <div class="div-center">
     <a href="https://wa.me/+919846449121" >
 <button type="button" class="join-btn">
   <span class="join-btn-text">JOIN NOW</span>
@@ -97,7 +129,7 @@
 </div>
 
   <!-- Footer -->
-<footer class="text-center text-lg-start bg-white text-muted">
+<footer class="text-center text-lg-start bg-dark text-muted">
   <!-- Section: Social media -->
   <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
     <!-- Left -->
@@ -140,7 +172,7 @@
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
           <!-- Content -->
           <h6 class="text-uppercase fw-bold mb-4">
-            <i class="fas fa-gem me-3 text-secondary"></i>Company name
+            <i class="fas fa-gem me-3 text-secondary"></i>Sandeep Fradian
           </h6>
           <p>
             Here you can use rows and columns to organize your footer content. Lorem ipsum
@@ -206,13 +238,14 @@
         <!-- Grid column -->
       </div>
       <!-- Grid row -->
+      <button class="scroll-top "></button>
     </div>
   </section>
   <!-- Section: Links  -->
 
   <!-- Copyright -->
   <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025);">
-    © 2021 Copyright:
+    © 2022 Copyright:
     <a class="text-reset fw-bold" href="#">Artofmentalism.com</a>
   </div>
   <!-- Copyright -->
