--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <link href="assets/img/favicon.png" rel="icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-    
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
@@ -48,13 +47,19 @@
             <a class="nav-link" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Pictures</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="#joinnow">Join Now</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#reviews">Reviews</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#inside">Whats inside</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#creations">Creations</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#videos">Videos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#contact">Contact</a>
@@ -69,6 +74,16 @@
     <div
     class="banner-image w-100 d-block justify-content-center align-items-center">
     <img src="assets/banner/mobile view/1.1.jpg" alt="">
+    <div class="container-title-icons mt-0 ">
+      <a href="https://www.instagram.com/sandeep_fradian_/?hl=en" class="icon-class2 me-0 text-reset">
+        <img width="10%" height="30%" src="assets/banner/mobile view/INSTA.png" alt="">
+      </a>
+      <a href="https://www.facebook.com/sandeepfradian1/" class="icon-class3 me-0 text-reset">
+        <img width="10%" height="30%"  src="assets/banner/mobile view/FACEBOOK.png" alt="">
+      </a>
+      <a href="https://www.youtube.com/c/MadMagicMindSandeepFradian" class="icon-class4 text-reset">
+        <img width="10%" height="30%" src="assets/banner/mobile view/YOUTUBE.png" alt="">
+      </a>
   </div>
   <div class="video-box">
     <iframe  src="https://www.youtube.com/embed/-VkZdkFrUa4"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; controls=0" allowfullscreen ></iframe>
@@ -90,14 +105,13 @@
     
   </section>
   <section class="banner-image w-100 d-block justify-content-center align-items-center">
-    <div class="video-box2"></div>
     <img src="assets/banner/mobile view/1.4.jpg" alt="">
   </section>
   <!-- join-section starts here -->
-  <section class="banner-image w-100 d-block justify-content-center align-items-center">
+  <section class="banner-image w-100 d-block justify-content-center align-items-center" id="joinnow">
     <img src="assets/banner/mobile view/1.5.jpg" alt="">
     <div class="div-center">
-      <a href="https://wa.me/+919846449121" >
+      <a href="https://wa.me/+918848541126" >
         <input type="image" style="width:100%;   
         height: 100%" src="assets/banner/mobile view/joinbtn.png"  alt="text">  
     </button>
@@ -106,20 +120,22 @@
   </section>
 <!-- join-section ends here -->
 </section>
-<section class="banner-image w-100 d-block justify-content-center align-items-center">
+<section class="banner-image w-100 d-block justify-content-center align-items-center" id="reviews">
+  <div class="video-box2">
   <img src="assets/banner/mobile view/1.6.jpg" alt="">
   <iframe  src="https://www.youtube.com/embed/yr1zOQJyjcQ"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; controls=0" allowfullscreen ></iframe>
+  </div> 
 </section>
 <section class="banner-image w-100 d-block justify-content-center align-items-center">
   <img src="assets/banner/mobile view/1.61.jpg" alt="">
 </section>
-<section class="banner-image w-100 d-block justify-content-center align-items-center">
+<section class="banner-image w-100 d-block justify-content-center align-items-center" id="inside">
   <img src="assets/banner/mobile view/1.7.jpg" alt="">
 </section>
 <section class="container-img d-block justify-content-center align-items-center">
   <img src="assets/banner/mobile view/1.8.jpg" alt="">
   <div class="div-center-btn2">
-    <a href="https://wa.me/+919846449121" >
+    <a href="https://wa.me/+918848541126" >
       <input type="image" style="width:100%;   
       height: 100%" src="assets/banner/mobile view/joinbtn.png"  alt="text">  
   </button>
@@ -132,134 +148,56 @@
 <section class="banner-image w-100 d-block justify-content-center align-items-center">
   <img src="assets/banner/mobile view/2.jpg" alt="">
 </section>
-<section class="banner-image w-100 d-block justify-content-center align-items-center">
+<section class="banner-image w-100 d-block justify-content-center align-items-center" id="creations">
   <img src="assets/banner/mobile view/2.1.jpg" alt="">
+</section>
+<section class="banner-image w-100 d-block justify-content-center align-items-center" id="videos">
+  <div class="video-box-container">
+   <img class="bgimage" src="assets/banner/mobile view/2.2.jpg" alt="">
+    <iframe class="video-box3" src="https://www.youtube.com/embed/FFGKquaaE2A"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; controls=0" allowfullscreen ></iframe>
+    <iframe class="video-box4" src="https://www.youtube.com/embed/Nze_b1L7xhI"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; controls=0" allowfullscreen ></iframe>
+    <iframe class="video-box5" src="https://www.youtube.com/embed/sSkiP5I7TlE"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; controls=0" allowfullscreen ></iframe>
+    <iframe class="video-box6" src="https://www.youtube.com/embed/sSkiP5I7TlE"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; controls=0" allowfullscreen ></iframe>
+  </div>
+
 </section>
 
 
 
-  <!-- Footer -->
-<footer class="text-center text-lg-start bg-dark text-muted">
-  <!-- Section: Social media -->
-  <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-    <!-- Left -->
-    <div class="me-5 d-none d-lg-block">
-      <span>Get connected with us on social networks:</span>
-    </div>
-    <!-- Left -->
 
-    <!-- Right -->
-    <div>
-      <a href="" class="me-4 link-secondary">
-        <i class="fab fa-facebook-f"></i>
-      </a>
-      <a href="" class="me-4 link-secondary">
-        <i class="fab fa-twitter"></i>
-      </a>
-      <a href="" class="me-4 link-secondary">
-        <i class="fab fa-google"></i>
-      </a>
-      <a href="" class="me-4 link-secondary">
-        <i class="fab fa-instagram"></i>
-      </a>
-      <a href="" class="me-4 link-secondary">
-        <i class="fab fa-linkedin"></i>
-      </a>
-      <a href="" class="me-4 link-secondary">
-        <i class="fab fa-github"></i>
-      </a>
-    </div>
-    <!-- Right -->
-  </section>
-  <!-- Section: Social media -->
+<section class="container-img2 w-100 d-block justify-content-center align-items-center" id="contact">
+  <img src="assets/banner/mobile view/2.3.jpg" alt="">
+  <div class="div-center-btn3">
+    <a href="https://wa.me/+918848541126" >
+      <input type="image" style="width:100%;   
+      height: 100%" src="assets/banner/mobile view/joinbtn.png"  alt="text">  
+  </button>
+</a>
+</div>
+</section>
+<section class="footer-class  justify-content-center p-2 ">
+  <img style="border:0;" src="assets/banner/mobile view/end.jpg" alt="">
+  <!-- Right -->
+  <div class="container-icons mt-0">
+    <a href="https://www.instagram.com/sandeep_fradian_/?hl=en" class="icon-class2 me-1 text-reset">
+      <img width="10%" height="30%" src="assets/banner/mobile view/Layer 2.png" alt="">
+    </a>
+    <a href="https://www.youtube.com/c/MadMagicMindSandeepFradian" class="icon-class3 me-1 text-reset">
+      <img width="10%" height="30%"  src="assets/banner/mobile view/Layer 3.png" alt="">
+    </a>
+    <a href="https://wa.me/+918848541126" class="icon-class4 text-reset">
+      <img width="10%" height="30%" src="assets/banner/mobile view/Layer 4.png" alt="">
+    </a>
+    <a href="#" class="scrltop-btn">
+      <ion-icon name="arrow-up-outline"></ion-icon>
+    </a>
+</div>
+</section>
+<!-- Right -->
 
-  <!-- Section: Links  -->
-  <section class="" id="contact">
-    <div class="container text-center text-md-start mt-5">
-      <!-- Grid row -->
-      <div class="row mt-3">
-        <!-- Grid column -->
-        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-          <!-- Content -->
-          <h6 class="text-uppercase fw-bold mb-4">
-            <i class="fas fa-gem me-3 text-secondary"></i>Sandeep Fradian
-          </h6>
-          <p>
-            Here you can use rows and columns to organize your footer content. Lorem ipsum
-            dolor sit amet, consectetur adipisicing elit.
-          </p>
-        </div>
-        <!-- Grid column -->
 
-        <!-- Grid column -->
-        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-          <!-- Links -->
-          <h6 class="text-uppercase fw-bold mb-4">
-            Products
-          </h6>
-          <p>
-            <a href="#!" class="text-reset">Angular</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">React</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">Vue</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">Laravel</a>
-          </p>
-        </div>
-        <!-- Grid column -->
 
-        <!-- Grid column -->
-        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-          <!-- Links -->
-          <h6 class="text-uppercase fw-bold mb-4">
-            Useful links
-          </h6>
-          <p>
-            <a href="#!" class="text-reset">Pricing</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">Settings</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">Orders</a>
-          </p>
-          <p>
-            <a href="#!" class="text-reset">Help</a>
-          </p>
-        </div>
-        <!-- Grid column -->
 
-        <!-- Grid column -->
-        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-          <!-- Links -->
-          <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-          <p><i class="fas fa-home me-3 text-secondary"></i> New York, NY 10012, US</p>
-          <p>
-            <i class="fas fa-envelope me-3 text-secondary"></i>
-            info@example.com
-          </p>
-          <p><i class="fas fa-phone me-3 text-secondary"></i> + 01 234 567 88</p>
-          <p><i class="fas fa-print me-3 text-secondary"></i> + 01 234 567 89</p>
-        </div>
-        <!-- Grid column -->
-      </div>
-      <!-- Grid row -->
-      <button class="scroll-top "></button>
-    </div>
-  </section>
-  <!-- Section: Links  -->
-
-  <!-- Copyright -->
-  <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025);">
-    © 2022 Copyright:
-    <a class="text-reset fw-bold" href="#">Artofmentalism.com</a>
-  </div>
-  <!-- Copyright -->
-</footer>
 
   <!-- Template Main JS File -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
@@ -275,3 +213,11 @@
   <span class="join-btn-icon">
     <ion-icon name="caret-forward-circle-outline"></ion-icon>
   </span> -->
+
+
+   <!-- Copyright -->
+     <!-- <div class="text-center " style="background-color:black ;">
+      © 2022 Copyright:
+      <a class="text-reset fw-bold" href="#">Artofmentalism.com</a>
+    </div> -->
+    <!-- Copyright -->
