--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <header class="container-fluid">
     <div
     class="banner-image w-100 d-block justify-content-center align-items-center">
-    <img src="assets/banner/mobile view/1.1.jpg" alt="">
+    <img src="assets/banner/mobile view/1.1.png" alt="">
     <div class="container-title-icons mt-0 ">
       <a href="https://www.instagram.com/sandeep_fradian_/?hl=en" class="icon-class2 me-0 text-reset">
         <img width="10%" height="30%" src="assets/banner/mobile view/INSTA.png" alt="">
@@ -97,19 +97,19 @@
  </div> -->
   </header>
   <section class="banner-image w-100 d-block justify-content-center align-items-center">
-    <img src="assets/banner//mobile view/1.2.jpg" alt="">
+    <img src="assets/banner//mobile view/1.2.png" alt="">
     
   </section>
   <section class="banner-image w-100 d-block justify-content-center align-items-center">
-    <img src="assets/banner/mobile view/1.3.jpg" alt="">
+    <img src="assets/banner/mobile view/1.3.png" alt="">
     
   </section>
   <section class="banner-image w-100 d-block justify-content-center align-items-center">
-    <img src="assets/banner/mobile view/1.4.jpg" alt="">
+    <img src="assets/banner/mobile view/1.4.png" alt="">
   </section>
   <!-- join-section starts here -->
   <section class="banner-image w-100 d-block justify-content-center align-items-center" id="joinnow">
-    <img src="assets/banner/mobile view/1.5.jpg" alt="">
+    <img src="assets/banner/mobile view/1.5.png" alt="">
     <div class="div-center">
       <a href="https://wa.me/+918848541126" >
         <input type="image" style="width:100%;   
@@ -122,18 +122,18 @@
 </section>
 <section class="banner-image w-100 d-block justify-content-center align-items-center" id="reviews">
   <div class="video-box2">
-  <img src="assets/banner/mobile view/1.6.jpg" alt="">
+  <img src="assets/banner/mobile view/1.6.png" alt="">
   <iframe  src="https://www.youtube.com/embed/yr1zOQJyjcQ"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; controls=0" allowfullscreen ></iframe>
   </div> 
 </section>
 <section class="banner-image w-100 d-block justify-content-center align-items-center">
-  <img src="assets/banner/mobile view/1.61.jpg" alt="">
+  <img src="assets/banner/mobile view/1.61.png" alt="">
 </section>
 <section class="banner-image w-100 d-block justify-content-center align-items-center" id="inside">
-  <img src="assets/banner/mobile view/1.7.jpg" alt="">
+  <img src="assets/banner/mobile view/1.7.png" alt="">
 </section>
 <section class="container-img d-block justify-content-center align-items-center">
-  <img src="assets/banner/mobile view/1.8.jpg" alt="">
+  <img src="assets/banner/mobile view/1.8.png" alt="">
   <div class="div-center-btn2">
     <a href="https://wa.me/+918848541126" >
       <input type="image" style="width:100%;   
@@ -143,17 +143,17 @@
 </div>
 </section>
 <section class="banner-image w-100 d-block justify-content-center align-items-center">
-  <img src="assets/banner/mobile view/1.9.jpg" alt="">
+  <img src="assets/banner/mobile view/1.9.png" alt="">
 </section>
 <section class="banner-image w-100 d-block justify-content-center align-items-center">
-  <img src="assets/banner/mobile view/2.jpg" alt="">
+  <img src="assets/banner/mobile view/2.png" alt="">
 </section>
 <section class="banner-image w-100 d-block justify-content-center align-items-center" id="creations">
-  <img src="assets/banner/mobile view/2.1.jpg" alt="">
+  <img src="assets/banner/mobile view/2.1.png" alt="">
 </section>
 <section class="banner-image w-100 d-block justify-content-center align-items-center" id="videos">
   <div class="video-box-container">
-   <img class="bgimage" src="assets/banner/mobile view/2.2.jpg" alt="">
+   <img class="bgimage" src="assets/banner/mobile view/2.2.png" alt="">
     <iframe class="video-box3" src="https://www.youtube.com/embed/FFGKquaaE2A"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; controls=0" allowfullscreen ></iframe>
     <iframe class="video-box4" src="https://www.youtube.com/embed/Nze_b1L7xhI"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; controls=0" allowfullscreen ></iframe>
     <iframe class="video-box5" src="https://www.youtube.com/embed/sSkiP5I7TlE"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; controls=0" allowfullscreen ></iframe>
@@ -166,7 +166,7 @@
 
 
 <section class="container-img2 w-100 d-block justify-content-center align-items-center" id="contact">
-  <img src="assets/banner/mobile view/2.3.jpg" alt="">
+  <img src="assets/banner/mobile view/2.3.png" alt="">
   <div class="div-center-btn3">
     <a href="https://wa.me/+918848541126" >
       <input type="image" style="width:100%;   
@@ -176,7 +176,7 @@
 </div>
 </section>
 <section class="footer-class  justify-content-center p-2 ">
-  <img style="border:0;" src="assets/banner/mobile view/end.jpg" alt="">
+  <img style="border:0;" src="assets/banner/mobile view/end.png" alt="">
   <!-- Right -->
   <div class="container-icons mt-0">
     <a href="https://www.instagram.com/sandeep_fradian_/?hl=en" class="icon-class2 me-1 text-reset">
