--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Do you want to become a professional mentalists??Then this pack is for you !!
+    Keralas first Exclusive Mind Reading course by Sandeep Fradian..Sandeep Fradian is one among the top mentalists, 
+    Mentalism Creator and Consultant of many mentalists in Kerala.
+    You can easily learn the pro contents that's covers all the techniques and methods of modern mentalism">
+    <meta name="keywords" content="Sandeep fradian,mentalism books, Best mentalism course,mentalism definition psychology,mentalism,Kerala mentalists">
+    <meta name="author" content="Sandeep fradian,Don Milton">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Art of Mentalism</title>
      <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/banner/mobile view/favicon.png" rel="icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
   <!-- Google Fonts -->
@@ -88,13 +94,7 @@
   <div class="video-box">
     <iframe  src="https://www.youtube.com/embed/-VkZdkFrUa4"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; controls=0" allowfullscreen ></iframe>
   </div>
- <!-- <div class="container-text mt-4 mb-4 text-white ">
 
-    <h2 class="text-item">ULTIMATE KIT FOR HOW TO READ MINDS</h2>
-    <h2 class="text-item">LEARN FROM THE CREATOR</h2>
-    <h2 class="text-item">PROFESSIONAL PACK</h2>
-
- </div> -->
   </header>
   <section class="banner-image w-100 d-block justify-content-center align-items-center">
     <img src="assets/banner//mobile view/1.2.png" alt="">
@@ -208,16 +208,7 @@
 </html>
 
 
-<!-- 
-<span class="join-btn-text">JOIN NOW</span>
-  <span class="join-btn-icon">
-    <ion-icon name="caret-forward-circle-outline"></ion-icon>
-  </span> -->
-
 
    <!-- Copyright -->
-     <!-- <div class="text-center " style="background-color:black ;">
-      © 2022 Copyright:
-      <a class="text-reset fw-bold" href="#">Artofmentalism.com</a>
-    </div> -->
+   <!-- ArtofMentalism.in -->
     <!-- Copyright -->
