divider progressbar scrollreveal

--- a/index.html
+++ b/index.html
@@ -30,6 +30,12 @@
   <link href="assets/css/style.css" rel="stylesheet">
 </head>
 <body>
+  <!-- scoll progress indicator -->
+  <div class="top-progress-holder">
+  <div class="progress-container">
+    <div class="progress-bar" id="myBar"></div>
+  </div>
+  </div>
   <!-- Navbar  -->
   <nav class="navbar fixed-top navbar-expand-lg navbar-dark p-md-3">
     <div class="container">
@@ -76,7 +82,7 @@
   </nav>
 
   <!-- Banner Image  -->
-  <header class="container-fluid">
+  <header class="container-fluid ">
     <div
     class="banner-image w-100 d-block justify-content-center align-items-center">
     <img src="assets/banner/mobile view/1.1.png" alt="">
@@ -98,15 +104,16 @@
   </header>
   <section class="banner-image w-100 d-block justify-content-center align-items-center">
     <img src="assets/banner//mobile view/1.2.png" alt="">
-    
   </section>
+  <div class="divider-class"></div>
   <section class="banner-image w-100 d-block justify-content-center align-items-center">
     <img src="assets/banner/mobile view/1.3.png" alt="">
-    
   </section>
+  <div class="divider-class"></div>
   <section class="banner-image w-100 d-block justify-content-center align-items-center">
     <img src="assets/banner/mobile view/1.4.png" alt="">
   </section>
+  <div class="divider-class"></div>
   <!-- join-section starts here -->
   <section class="banner-image w-100 d-block justify-content-center align-items-center" id="joinnow">
     <img src="assets/banner/mobile view/1.5.png" alt="">
@@ -118,20 +125,23 @@
   </a>
   </div>
   </section>
+  <div class="divider-class"></div>
 <!-- join-section ends here -->
-</section>
 <section class="banner-image w-100 d-block justify-content-center align-items-center" id="reviews">
   <div class="video-box2">
   <img src="assets/banner/mobile view/1.6.png" alt="">
   <iframe  src="https://www.youtube.com/embed/yr1zOQJyjcQ"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; controls=0" allowfullscreen ></iframe>
   </div> 
 </section>
+<div class="divider-class"></div>
 <section class="banner-image w-100 d-block justify-content-center align-items-center">
   <img src="assets/banner/mobile view/1.61.png" alt="">
 </section>
+<div class="divider-class"></div>
 <section class="banner-image w-100 d-block justify-content-center align-items-center" id="inside">
   <img src="assets/banner/mobile view/1.7.png" alt="">
 </section>
+<div class="divider-class"></div>
 <section class="container-img d-block justify-content-center align-items-center">
   <img src="assets/banner/mobile view/1.8.png" alt="">
   <div class="div-center-btn2">
@@ -142,15 +152,19 @@
 </a>
 </div>
 </section>
+<div class="divider-class"></div>
 <section class="banner-image w-100 d-block justify-content-center align-items-center">
   <img src="assets/banner/mobile view/1.9.png" alt="">
 </section>
+<div class="divider-class"></div>
 <section class="banner-image w-100 d-block justify-content-center align-items-center">
   <img src="assets/banner/mobile view/2.png" alt="">
 </section>
+<div class="divider-class"></div>
 <section class="banner-image w-100 d-block justify-content-center align-items-center" id="creations">
   <img src="assets/banner/mobile view/2.1.png" alt="">
 </section>
+<div class="divider-class"></div>
 <section class="banner-image w-100 d-block justify-content-center align-items-center" id="videos">
   <div class="video-box-container">
    <img class="bgimage" src="assets/banner/mobile view/2.2.png" alt="">
@@ -159,9 +173,8 @@
     <iframe class="video-box5" src="https://www.youtube.com/embed/sSkiP5I7TlE"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; controls=0" allowfullscreen ></iframe>
     <iframe class="video-box6" src="https://www.youtube.com/embed/sSkiP5I7TlE"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; controls=0" allowfullscreen ></iframe>
   </div>
-
 </section>
-
+<div class="divider-class"></div>
 
 
 
@@ -188,7 +201,7 @@
     <a href="https://wa.me/+918848541126" class="icon-class4 text-reset">
       <img width="10%" height="30%" src="assets/banner/mobile view/Layer 4.png" alt="">
     </a>
-    <a href="#" class="scrltop-btn">
+    <a href="#" class="scrltop-btn" id="scrltop-btn">
       <ion-icon name="arrow-up-outline"></ion-icon>
     </a>
 </div>
