--- a/index.html
+++ b/index.html
@@ -105,15 +105,17 @@
   <section class="banner-image w-100 d-block justify-content-center align-items-center">
     <img src="assets/banner//mobile view/1.2.png" alt="">
   </section>
-  <div class="divider-class"></div>
+  <div class="divider-class">
+    <img height="30px" width="100%" src="/assets/banner/mobile view/divider.png" alt="">
+  </div>
   <section class="banner-image w-100 d-block justify-content-center align-items-center">
     <img src="assets/banner/mobile view/1.3.png" alt="">
   </section>
-  <div class="divider-class"></div>
+  
   <section class="banner-image w-100 d-block justify-content-center align-items-center">
     <img src="assets/banner/mobile view/1.4.png" alt="">
   </section>
-  <div class="divider-class"></div>
+ 
   <!-- join-section starts here -->
   <section class="banner-image w-100 d-block justify-content-center align-items-center" id="joinnow">
     <img src="assets/banner/mobile view/1.5.png" alt="">
@@ -125,7 +127,9 @@
   </a>
   </div>
   </section>
-  <div class="divider-class"></div>
+  <div class="divider-class">
+    <img height="30px" width="100%" src="/assets/banner/mobile view/divider.png" alt="">
+  </div>
 <!-- join-section ends here -->
 <section class="banner-image w-100 d-block justify-content-center align-items-center" id="reviews">
   <div class="video-box2">
@@ -133,15 +137,18 @@
   <iframe  src="https://www.youtube.com/embed/yr1zOQJyjcQ"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; controls=0" allowfullscreen ></iframe>
   </div> 
 </section>
-<div class="divider-class"></div>
+<div class="divider-class">
+  <img height="30px" width="100%" src="/assets/banner/mobile view/divider.png" alt="">
+</div>
 <section class="banner-image w-100 d-block justify-content-center align-items-center">
   <img src="assets/banner/mobile view/1.61.png" alt="">
 </section>
-<div class="divider-class"></div>
+<div class="divider-class">
+  <img height="30px" width="100%" src="/assets/banner/mobile view/divider.png" alt="">
+</div>
 <section class="banner-image w-100 d-block justify-content-center align-items-center" id="inside">
   <img src="assets/banner/mobile view/1.7.png" alt="">
 </section>
-<div class="divider-class"></div>
 <section class="container-img d-block justify-content-center align-items-center">
   <img src="assets/banner/mobile view/1.8.png" alt="">
   <div class="div-center-btn2">
@@ -152,19 +159,25 @@
 </a>
 </div>
 </section>
-<div class="divider-class"></div>
+<div class="divider-class">
+  <img height="30px" width="100%" src="/assets/banner/mobile view/divider.png" alt="">
+</div>
 <section class="banner-image w-100 d-block justify-content-center align-items-center">
   <img src="assets/banner/mobile view/1.9.png" alt="">
 </section>
-<div class="divider-class"></div>
+<div class="divider-class">
+  <img height="30px" width="100%" src="/assets/banner/mobile view/divider.png" alt="">
+</div>
 <section class="banner-image w-100 d-block justify-content-center align-items-center">
   <img src="assets/banner/mobile view/2.png" alt="">
 </section>
-<div class="divider-class"></div>
+<div class="divider-class">
+  <img height="30px" width="100%" src="/assets/banner/mobile view/divider.png" alt="">
+</div>
 <section class="banner-image w-100 d-block justify-content-center align-items-center" id="creations">
   <img src="assets/banner/mobile view/2.1.png" alt="">
 </section>
-<div class="divider-class"></div>
+
 <section class="banner-image w-100 d-block justify-content-center align-items-center" id="videos">
   <div class="video-box-container">
    <img class="bgimage" src="assets/banner/mobile view/2.2.png" alt="">
@@ -174,7 +187,7 @@
     <iframe class="video-box6" src="https://www.youtube.com/embed/sSkiP5I7TlE"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; controls=0" allowfullscreen ></iframe>
   </div>
 </section>
-<div class="divider-class"></div>
+
 
 
 
