--- a/index.html
+++ b/index.html
@@ -85,16 +85,16 @@
   <header class="container-fluid ">
     <div
     class="banner-image w-100 d-block justify-content-center align-items-center">
-    <img src="assets/banner/mobile view/1.1.png" alt="">
+    <img src="assets/banner/mobile view/1.1.png" alt="sandeep fradian">
     <div class="container-title-icons mt-0 ">
       <a href="https://www.instagram.com/sandeep_fradian_/?hl=en" class="icon-class2 me-0 text-reset">
-        <img width="10%" height="30%" src="assets/banner/mobile view/INSTA.png" alt="">
+        <img width="10%" height="30%" src="assets/banner/mobile view/INSTA.png" alt="sandeep fradian">
       </a>
       <a href="https://www.facebook.com/sandeepfradian1/" class="icon-class3 me-0 text-reset">
-        <img width="10%" height="30%"  src="assets/banner/mobile view/FACEBOOK.png" alt="">
+        <img width="10%" height="30%"  src="assets/banner/mobile view/FACEBOOK.png" alt="sandeep fradian">
       </a>
       <a href="https://www.youtube.com/c/MadMagicMindSandeepFradian" class="icon-class4 text-reset">
-        <img width="10%" height="30%" src="assets/banner/mobile view/YOUTUBE.png" alt="">
+        <img width="10%" height="30%" src="assets/banner/mobile view/YOUTUBE.png" alt="sandeep fradian">
       </a>
   </div>
   <div class="video-box">
@@ -103,22 +103,22 @@
 
   </header>
   <section class="banner-image w-100 d-block justify-content-center align-items-center">
-    <img src="assets/banner//mobile view/1.2.png" alt="">
+    <img src="assets/banner//mobile view/1.2.png" alt="sandeep fradian">
   </section>
   <div class="divider-class">
-    <img height="30px" width="100%" src="/assets/banner/mobile view/divider.png" alt="">
+    <img height="30px" width="100%" src="/assets/banner/mobile view/divider.png" alt="sandeep fradian">
   </div>
   <section class="banner-image w-100 d-block justify-content-center align-items-center">
-    <img src="assets/banner/mobile view/1.3.png" alt="">
+    <img src="assets/banner/mobile view/1.3.png" alt="sandeep fradian">
   </section>
   
   <section class="banner-image w-100 d-block justify-content-center align-items-center">
-    <img src="assets/banner/mobile view/1.4.png" alt="">
+    <img src="assets/banner/mobile view/1.4.png" alt="sandeep fradian">
   </section>
  
   <!-- join-section starts here -->
   <section class="banner-image w-100 d-block justify-content-center align-items-center" id="joinnow">
-    <img src="assets/banner/mobile view/1.5.png" alt="">
+    <img src="assets/banner/mobile view/1.5.png" alt="sandeep fradian">
     <div class="div-center">
       <a href="https://wa.me/+918848541126" >
         <input type="image" style="width:100%;   
@@ -128,29 +128,29 @@
   </div>
   </section>
   <div class="divider-class">
-    <img height="30px" width="100%" src="/assets/banner/mobile view/divider.png" alt="">
+    <img height="30px" width="100%" src="/assets/banner/mobile view/divider.png" alt="sandeep fradian">
   </div>
 <!-- join-section ends here -->
 <section class="banner-image w-100 d-block justify-content-center align-items-center" id="reviews">
   <div class="video-box2">
-  <img src="assets/banner/mobile view/1.6.png" alt="">
+  <img src="assets/banner/mobile view/1.6.png" alt="sandeep fradian">
   <iframe  src="https://www.youtube.com/embed/yr1zOQJyjcQ"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; controls=0" allowfullscreen ></iframe>
   </div> 
 </section>
 <div class="divider-class">
-  <img height="30px" width="100%" src="/assets/banner/mobile view/divider.png" alt="">
+  <img height="30px" width="100%" src="/assets/banner/mobile view/divider.png" alt="sandeep fradian">
 </div>
 <section class="banner-image w-100 d-block justify-content-center align-items-center">
-  <img src="assets/banner/mobile view/1.61.png" alt="">
+  <img src="assets/banner/mobile view/1.61.png" alt="sandeep fradian">
 </section>
 <div class="divider-class">
-  <img height="30px" width="100%" src="/assets/banner/mobile view/divider.png" alt="">
+  <img height="30px" width="100%" src="/assets/banner/mobile view/divider.png" alt="sandeep fradian">
 </div>
 <section class="banner-image w-100 d-block justify-content-center align-items-center" id="inside">
-  <img src="assets/banner/mobile view/1.7.png" alt="">
+  <img src="assets/banner/mobile view/1.7.png" alt="sandeep fradian">
 </section>
 <section class="container-img d-block justify-content-center align-items-center">
-  <img src="assets/banner/mobile view/1.8.png" alt="">
+  <img src="assets/banner/mobile view/1.8.png" alt="sandeep fradian">
   <div class="div-center-btn2">
     <a href="https://wa.me/+918848541126" >
       <input type="image" style="width:100%;   
@@ -160,27 +160,27 @@
 </div>
 </section>
 <div class="divider-class">
-  <img height="30px" width="100%" src="/assets/banner/mobile view/divider.png" alt="">
+  <img height="30px" width="100%" src="/assets/banner/mobile view/divider.png" alt="sandeep fradian">
 </div>
 <section class="banner-image w-100 d-block justify-content-center align-items-center">
-  <img src="assets/banner/mobile view/1.9.png" alt="">
+  <img src="assets/banner/mobile view/1.9.png" alt="sandeep fradian">
 </section>
 <div class="divider-class">
-  <img height="30px" width="100%" src="/assets/banner/mobile view/divider.png" alt="">
+  <img height="30px" width="100%" src="/assets/banner/mobile view/divider.png" alt="sandeep fradian">
 </div>
 <section class="banner-image w-100 d-block justify-content-center align-items-center">
-  <img src="assets/banner/mobile view/2.png" alt="">
+  <img src="assets/banner/mobile view/2.png" alt="sandeep fradian">
 </section>
 <div class="divider-class">
-  <img height="30px" width="100%" src="/assets/banner/mobile view/divider.png" alt="">
+  <img height="30px" width="100%" src="/assets/banner/mobile view/divider.png" alt="sandeep fradian">
 </div>
 <section class="banner-image w-100 d-block justify-content-center align-items-center" id="creations">
-  <img src="assets/banner/mobile view/2.1.png" alt="">
+  <img src="assets/banner/mobile view/2.1.png" alt="sandeep fradian">
 </section>
 
 <section class="banner-image w-100 d-block justify-content-center align-items-center" id="videos">
   <div class="video-box-container">
-   <img class="bgimage" src="assets/banner/mobile view/2.2.png" alt="">
+   <img class="bgimage" src="assets/banner/mobile view/2.2.png" alt="sandeep fradian">
     <iframe class="video-box3" src="https://www.youtube.com/embed/FFGKquaaE2A"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; controls=0" allowfullscreen ></iframe>
     <iframe class="video-box4" src="https://www.youtube.com/embed/Nze_b1L7xhI"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; controls=0" allowfullscreen ></iframe>
     <iframe class="video-box5" src="https://www.youtube.com/embed/sSkiP5I7TlE"  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; controls=0" allowfullscreen ></iframe>
@@ -192,7 +192,7 @@
 
 
 <section class="container-img2 w-100 d-block justify-content-center align-items-center" id="contact">
-  <img src="assets/banner/mobile view/2.3.png" alt="">
+  <img src="assets/banner/mobile view/2.3.png" alt="sandeep fradian">
   <div class="div-center-btn3">
     <a href="https://wa.me/+918848541126" >
       <input type="image" style="width:100%;   
@@ -202,17 +202,17 @@
 </div>
 </section>
 <section class="footer-class  justify-content-center p-2 ">
-  <img style="border:0;" src="assets/banner/mobile view/end.png" alt="">
+  <img style="border:0;" src="assets/banner/mobile view/end.png" alt="sandeep fradian">
   <!-- Right -->
   <div class="container-icons mt-0">
     <a href="https://www.instagram.com/sandeep_fradian_/?hl=en" class="icon-class2 me-1 text-reset">
-      <img width="10%" height="30%" src="assets/banner/mobile view/Layer 2.png" alt="">
+      <img width="10%" height="30%" src="assets/banner/mobile view/Layer 2.png" alt="sandeep fradian">
     </a>
     <a href="https://www.youtube.com/c/MadMagicMindSandeepFradian" class="icon-class3 me-1 text-reset">
-      <img width="10%" height="30%"  src="assets/banner/mobile view/Layer 3.png" alt="">
+      <img width="10%" height="30%"  src="assets/banner/mobile view/Layer 3.png" alt="sandeep fradian">
     </a>
     <a href="https://wa.me/+918848541126" class="icon-class4 text-reset">
-      <img width="10%" height="30%" src="assets/banner/mobile view/Layer 4.png" alt="">
+      <img width="10%" height="30%" src="assets/banner/mobile view/Layer 4.png" alt="sandeep fradian">
     </a>
     <a href="#" class="scrltop-btn" id="scrltop-btn">
       <ion-icon name="arrow-up-outline"></ion-icon>
