--- a/index.html
+++ b/index.html
@@ -108,6 +108,41 @@
   <div class="divider-class">
     <img height="30px" width="100%" src="/assets/banner/mobile view/divider.png" alt="sandeep fradian">
   </div>
+
+  <section class="banner-image1 w-100 d-block justify-content-center align-items-center">
+      <div class="newvideo-pos">
+        <iframe src="https://www.youtube.com/embed/OnnYhpRgg0c" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; controls=0"
+          allowfullscreen></iframe>
+      </div>
+    <img src="assets/banner/mobile view/1.2.1.jpg" alt="sandeep fradian">
+    <div class="div-center-btnone">
+      <a href="https://wa.me/+918848541126">
+        <input type="image" style="width:100%;   
+            height: 100%" src="assets/banner/mobile view/demobtn.png" alt="text">
+        </button>
+      </a>
+    </div>
+    <div class="div-center-btntwo">
+      <a href="https://wa.me/+918848541126">
+        <input type="image" style="width:100%;   
+            height: 100%" src="assets/banner/mobile view/chtbtn.png" alt="text">
+        </button>
+      </a>
+    </div>
+    <div class="div-center-btnthree">
+      <a href="https://wa.me/+918848541126">
+        <input type="image" style="width:100%;   
+            height: 100%" src="assets/banner/mobile view/joinnewbtn.png" alt="text">
+        </button>
+      </a>
+    </div>
+      <div class="divider-class">
+        <img height="30px" width="100%" src="/assets/banner/mobile view/divider.png" alt="sandeep fradian">
+      </div> 
+  </section>
+
+  
   <section class="banner-image w-100 d-block justify-content-center align-items-center">
     <img src="assets/banner/mobile view/1.3.png" alt="sandeep fradian">
   </section>
