--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       </div>
     <img src="assets/banner/mobile view/1.2.1.jpg" alt="sandeep fradian">
     <div class="div-center-btnone">
-      <a href="https://wa.me/+918848541126">
+      <a href="http://shop.artofmentalism.in/">
         <input type="image" style="width:100%;   
             height: 100%" src="assets/banner/mobile view/demobtn.png" alt="text">
         </button>
