--- a/index.html
+++ b/index.html
@@ -108,6 +108,34 @@
   <div class="divider-class">
     <img height="30px" width="100%" src="/assets/banner/mobile view/divider.png" alt="sandeep fradian">
   </div>
+    <section class="banner-image1 w-100 d-block justify-content-center align-items-center">
+    
+      <img src="assets/banner/mobile view/1.2.1.jpg" alt="sandeep fradian">
+      <div class="div-course-btnone">
+        <a href="/pages/paynow.html">
+          <input type="image" style="width:100%;   
+                height: 100%" src="assets/banner/mobile view/1999btn.png" alt="text">
+          </button>
+        </a>
+      </div>
+      <div class="div-course-btntwo">
+        <a href="/pages/paynow.html">
+          <input type="image" style="width:100%;   
+                height: 100%" src="assets/banner/mobile view/3777btn.png" alt="text">
+          </button>
+        </a>
+      </div>
+      <div class="div-course-btnthree">
+        <a href="/pages/paynow.html">
+          <input type="image" style="width:100%;   
+                height: 100%" src="assets/banner/mobile view/7777btn.png" alt="text">
+          </button>
+        </a>
+      </div>
+      <div class="divider-class">
+        <img height="30px" width="100%" src="/assets/banner/mobile view/divider.png" alt="sandeep fradian">
+      </div>
+    </section>
 
   <section class="banner-image1 w-100 d-block justify-content-center align-items-center">
       <div class="newvideo-pos">
@@ -115,7 +143,7 @@
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; controls=0"
           allowfullscreen></iframe>
       </div>
-    <img src="assets/banner/mobile view/1.2.1.jpg" alt="sandeep fradian">
+    <img src="assets/banner/mobile view/1.2.2.jpg" alt="sandeep fradian">
     <div class="div-center-btnone">
       <a href="http://treasure.artofmentalism.in/">
         <input type="image" style="width:100%;   
